Initial calendar work

--- a/TODO
+++ b/TODO
@@ -1,2 +1,4 @@
-Add "new" flag for individual items
-Add clickable tooltip
+Add calendar file export
+biur vs Biur - bug?
+Domain name
+Explanations of statuses
